<resources>
    <string name="app_name">Apex Dagger</string>
    <string name="create_entry">Create New Entry</string>
    <string name="delete_all">Delete all data</string>
    <string name="timestamp_will_appear_here">Timestamp will appear here</string>
    <string name="get_all_data">Get all data</string>
    <string name="update_entry">Update data by Id</string>
    <string name="delete_data_by_id">Delete data by Id</string>
    <string name="generate_json_file">Generate Json File</string>
    <string name="room_database">Room Database</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="generated_slug_will_appear_here">Generated Slug will appear here</string>
    <string name="loading">Loading…</string>
    <string name="post_title">Post Title</string>
    <string name="post_body">Post Body</string>
    <string name="post_Id">Post Id</string>
    <string name="post_Userid">Post UserId</string>
    <string name="time">Time</string>
    <string name="checking_connectivity">Checking connectivity...</string>
</resources>